--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: 16
       - name: Build with Ant
-        run: ant -noinput -buildfile build.xml xar-local
+        run: ant -noinput -buildfile build.xml
       - name: GH Release
         uses: softprops/action-gh-release@v0.1.15
         with:
