--- a/build.xml
+++ b/build.xml
@@ -1,16 +1,47 @@
 <project name="lediir" default="xar">
+    <property name="data.version" value="1" />
     <xmlproperty file="expath-pkg.xml" /> <!-- Adjust path below to match location of your npm binary -->
     <property name="project.version" value="${package(version)}" />
     <property name="project.app" value="${package(abbrev)}" />
     <property name="build.dir" value="build" />
+    
+    <target name="test.if.version.is.set">
+        <condition property="version.is.set">
+            <length string="${data.version}" trim="true" when="greater" length="0"/>
+        </condition>
+    </target>
+
     <target name="clean">
         <echo message="Deleting ${build} directory" />
         <delete dir="${build}" />
     </target>
-    <target name="xar">
-        <mkdir dir="${build.dir}" />
-        <zip basedir="." destfile="${build.dir}/${project.app}-${project.version}.xar" excludes="${build.dir} ${build.dir}/* *.build.properties build.properties .existdb.json *.xstrc .gitignore *.code-workspace" />
-        <copy file="${build.dir}/${project.app}-${project.version}.xar" overwrite="true" tofile="${build.dir}/${project.app}.xar"/>
+
+    <target name="xar" depends="repo.prepare,xar-zip,xar-versions">
     </target>
     <target name="xar-complete" depends="clean,xar" />
+    <target name="xar-zip" depends="repo.prepare">
+        <mkdir dir="${build.dir}" />
+        <zip basedir="." destfile="${build.dir}/${project.app}-${project.version}.xar" excludes="${build.dir} ${build.dir}/* *.build.properties build.properties .existdb.json *.xstrc .gitignore *.code-workspace local.*" />
+        <copy file="${build.dir}/${project.app}-${project.version}.xar" overwrite="true" tofile="${build.dir}/${project.app}.xar"/>
+    </target>
+    <target name="xar-versions" if="version.is.set"  depends="test.if.version.is.set">
+        <copy file="${build.dir}/${project.app}-${project.version}.xar" overwrite="true" tofile="${build.dir}/${project.app}-${data.version}.xar"/>
+    </target>
+
+    <target name="repo.prepare" depends="repo.clean">
+        <move file="repo.xml" tofile="local.repo.xml"  overwrite="true"/>
+        <move file="expath-pkg.xml" tofile="local.expath-pkg.xml"  overwrite="true"/>
+        <xslt style="version.xsl" in="local.repo.xml" out="repo.xml">
+         <param name="version" expression="${data.version}"/>
+        </xslt>
+        <xslt style="version.xsl" in="local.expath-pkg.xml" out="expath-pkg.xml">
+            <param name="version" expression="${data.version}"/>
+        </xslt>
+    </target>
+    
+    <target name="repo.clean">
+       <move file="local.repo.xml" tofile="repo.xml" overwrite="true"/>
+       <move file="local.expath-pkg.xml" tofile="expath-pkg.xml" overwrite="true" />
+    </target>
+
 </project>
